# TransFE

./: .gitignore  AxiElementTransform.h  AxiMagBilinearIntegrator.h  AxiMagLinearIntegrator.h  BilinearForm.h  BilinearFormIntegrator.h  CMakeLists.txt  CMakePresets.json  ElementTransform.h  ElementTransform2D.h  ElementTransform2DAxi.h  FESpace.h  FESpaceH1.h  FESpaceHCurl.h  FiniteElement.h  GeometryLagrangeShapeFunction.h  HCurlBilinearIntegrator.h  LagrangeElement.h  LagrangePolynomialBasis.h  LinTriIntRule.h  LinearForm.h  LinearFormIntegrator.h  MagBilinearIntegrator.h  MagLinearIntegrator.h  NedelecElement.h  Notes.txt  PiolaTransform.h  ReferenceGeometry.h  ShapeFunction.h  TransFE.vcxproj  TransFE.vcxproj.filters  TriangleReferenceGeometry.cpp  TriangleReferenceGeometry.h  algebraicsystem.h  assembler.h  axisymmetric_curl_curl_integrator.hpp  axisymmetric_lf_integrator.hpp  axisymmetric_mass_integrator.hpp  coefficient.hpp  config_validator.hpp  (+39 more)
.github/: copilot-instructions.md
Mesh/: gmsh_reader.cpp  mesh.cpp  mesh.h  point.h
MeshDB/: EdgeUse.h  mesh.cpp  mesh.h  meshedge.h  meshentity.h  meshface.h  meshregion.h  meshvertex.h  node.h  point.h
MeshViewer/: main.cpp
Old/: AxiMagBilinearIntegrator.h
